--- a/level6.html
+++ b/level6.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="door1.png" class="img-fluid" alt="">
+          </div>
+          <div class="col">
+            <img src="door1.png" class="img-fluid" alt="">
+          </div>
+          <div class="col">
+            <img src="door1.png" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
 </body>
 </html>
