--- a/level5.html
+++ b/level5.html
@@ -11,15 +11,25 @@
     <div class="container">
         <div class="row">
           <div class="col-4">
-            <img src="door1.png" class="img-fluid" alt="">
+            <img src="door1.png" class="img-fluid" onclick="die()" id="die" alt="">
           </div>
           <div class="col-4">
-            <img src="door1.png" class="img-fluid" alt="">
+            <img src="door1.png" class="img-fluid" onclick="live()" id="live" alt="">
           </div>
           <div class="col-4">
-            <img src="door1.png" class="img-fluid" alt="">
+            <img src="door1.png" class="img-fluid" onclick="die()" id="die" alt="">
           </div>
         </div>
       </div>
+
+      <script>
+      alert("select the right door")
+      function live() {
+      alert("you are lucky")
+      }
+      function die() {
+      alert("i knew you aint going to make it")
+      }
+      </script>
 </body>
 </html>
