--- a/level6.html
+++ b/level6.html
@@ -5,20 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="level5.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
-          <div class="col">
-            <img src="door1.png" class="img-fluid" alt="">
+          <div class="col-4">
+            <img src="door1.png" class="img-fluid" onclick="die()" id="die" alt="">
           </div>
-          <div class="col">
-            <img src="door1.png" class="img-fluid" alt="">
+          <div class="col-4">
+            <img src="door1.png" class="img-fluid" onclick="live()" id="live" alt="">
           </div>
-          <div class="col">
-            <img src="door1.png" class="img-fluid" alt="">
+          <div class="col-4">
+            <img src="door1.png" class="img-fluid" onclick="die()" id="die" alt="">
           </div>
         </div>
       </div>
+
+      <script>
+      alert("select the right door")
+      function live() {
+      alert("you are lucky")
+      }
+      function die() {
+      alert("i knew you aint going to make it")
+      }
+      </script>
 </body>
 </html>
